Fixed card hover fade not covering the width of the double card

--- a/app/assets/stylesheets/_common-ui/cards/_cards_base.sass
+++ b/app/assets/stylesheets/_common-ui/cards/_cards_base.sass
@@ -61,9 +61,9 @@ $image-only-padding:           7px
       @extend %empty-abs-generated-content
       background-color: rgba(0,0,0,0.3)
       top: 0
-      right: 0
-      bottom: 0
       left: 0
+      width: 100%
+      height: 100%
 
   .card--small-image &
     height: $small-card-image-height
